Adds country-db ands uses it on the typeahead and country-list components.

--- a/src/components/country-list/country-list.html
+++ b/src/components/country-list/country-list.html
@@ -4,14 +4,14 @@
         <tr>
             <th>#</th>
             <th>Country</th>
-            <th>Language</th>
+            <th>Region</th>
         </tr>
         </thead>
         <tbody>
         <tr ng-repeat="country in $ctrl.countries">
             <td ng-bind="::$index"></td>
             <td ng-bind="::country.name"></td>
-            <td ng-bind="::country.lang"></td>
+            <td ng-bind="::country.region"></td>
         </tr>
         </tbody>
     </table>
