--- a/src/components/typeahead/typeahead.html
+++ b/src/components/typeahead/typeahead.html
@@ -1,4 +1,4 @@
 <div class="form-group">
     <label for="country">Filter by Country</label>
-    <input id="country" type="text" ng-model="$ctrl.selectedCountry" uib-typeahead="country.name for country in $ctrl.countries" class="form-control">
+    <input id="country" type="text" ng-model="$ctrl.selectedCountry" uib-typeahead="country.name for country in $ctrl.countries | filter: {name: $viewValue}" class="form-control">
 </div>
